<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:flexDirection="column"
        app:flexWrap="wrap">

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:justifyContent="space_between"
            app:flexDirection="row"
            app:flexWrap="wrap"
            android:background="@color/colorDownloadMatch">

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_cancel"
                android:textColor="@color/colorMatchList"
                android:background="@android:color/transparent"
                android:onClick="onCancelLoginDialog"/>

            <Button
                android:id="@+id/button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_login"
                android:textColor="@color/colorMatchList"
                android:background="@android:color/transparent"
                android:onClick="onLoginLoginDialog"/>

        </com.google.android.flexbox.FlexboxLayout>


        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:justifyContent="center"
            app:alignItems="center"
            app:flexDirection="column"
            app:flexWrap="wrap"
            android:padding="16dp">

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:alignItems="center"
                app:justifyContent="flex_start"
                app:flexDirection="row"
                app:flexWrap="wrap">

                <TextView
                    android:id="@+id/text_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/download_url"/>


                <EditText
                    android:id="@+id/edit_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_flexGrow="0.8"/>

            </com.google.android.flexbox.FlexboxLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:alignItems="center"
                app:justifyContent="flex_start"
                app:flexDirection="row"
                app:flexWrap="wrap">

                <TextView
                    android:id="@+id/text_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/download_username"/>


                <EditText
                    android:id="@+id/edit_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_flexGrow="0.8" />

            </com.google.android.flexbox.FlexboxLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:alignItems="center"
                app:justifyContent="flex_start"
                app:flexDirection="row"
                app:flexWrap="wrap">

                <TextView
                    android:id="@+id/text_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/download_password"/>


                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:inputType="textPassword"
                    app:layout_flexGrow="0.8" />

            </com.google.android.flexbox.FlexboxLayout>

        </com.google.android.flexbox.FlexboxLayout>

    </com.google.android.flexbox.FlexboxLayout>

</RelativeLayout>